Comecei a escrever conteudo

--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
 <body>
     <main>
         <header>
-            <h1>titulo do site</h1>
+            <h1>Cursos gratis</h1>
             <article>
-                <h2>Artigo 001</h2>
-                <p>texto do artigo 001</p>
+                <h2>Curso de HTML5 com CSS3</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae sunt accusamus aut ullam repellat cum. Tempore iste ipsum doloribus officia illum necessitatibus natus magnam ratione incidunt. Quas laborum quaerat velit.</p>
 
             </article>
             <article>
-                <h2>Artigo 002</h2>
-                <p>texto artigo 002</p>
+                <h2>Curso de JavaScript</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil minus dignissimos ullam itaque? Fugiat modi numquam odit? Est error optio animi veritatis reprehenderit labore sint, harum officiis quisquam eveniet ut.</p>
             </article>
         </header>
     </main>
